--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
+        "barryvdh/laravel-debugbar": "~2.4",
         "laravel/framework": "5.4.*"
     },
     "require-dev": {
