--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,16 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "barryvdh/laravel-debugbar": "~2.4",
         "laravel/framework": "5.4.*"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "~2.4",
         "barryvdh/laravel-ide-helper": "^2.4",
         "doctrine/dbal": "^2.6",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~5.7",
+        "laravel/tinker": "^1.0"
     },
     "autoload": {
         "classmap": [
